ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-homepage-website-html-css-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - "daoducan.io.vn"
    secretName: ui-homepage-website-html-css-tls
  rules:
  - host: "daoducan.io.vn"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-homepage-website-html-css-service
            port:
              number: 80
